tests/bad/types/2.moc
Int main() {
    Int i = 0+'7';
    Int j = 42/"6";
    i+42;
    42+j;
    i+j;
    i*42;
    42*j;
    i*j;
    42 < "enseeiht";
    42 == '7';
}

